--- a/assets/iconfont/iconfont.css
+++ b/assets/iconfont/iconfont.css
@@ -20,7 +20,9 @@
 .icon-fenxiang:before { content: "\e600"; }
 .icon-arrow2:before { content: "\e609"; }
 .icon-shenglve:before { content: "\e601"; }
+.icon-yinxingqia:before { content: "\e60b"; }
 .icon-arrow-copy:before { content: "\e60a"; }
+.icon-cunqianguan:before { content: "\e60c"; }
 .icon-iconfontshangjia:before { content: "\e602"; }
 .icon-iconfontshoujihao:before { content: "\e603"; }
 .icon-iconfontdingwei:before { content: "\e604"; }
