除登陆注册声明，其他大体差不多了

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -150,5 +150,20 @@ input:not([type=radio]):not([type=checkbox]), select {
 input{
     text-align: center;
     border-width: 0 0 2px ;
+    width:50%
+}
+#vld-tooltip {
+    position: absolute;
+    top:0;
+    z-index: 1000;
+    padding: 5px 10px;
+    background: #F37B1D;
+    width:100%;
+    /*min-width: 150px;*/
+    color: #fff;
+    text-align: center;
+    transition: all 0.15s;
+    box-shadow: 0 0 5px rgba(0,0,0,.15);
+    /*display: none;*/
 }
 
