--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -9,11 +9,9 @@
     font-style: normal;
 }
 
-a {
+a ,a:focus, a:hover {
     color: black;
 }
-
-
 
 .bg-white {
     background: white
@@ -71,6 +69,14 @@ a {
     border-color: #e3e3e3;
     background: #f0f0f0;
     color: #a4a4a4;
+}
+.title {
+    border-style: solid;
+    border-width: 1px 0;
+    border-color: #e3e3e3;
+    background: #f0f0f0;
+    color: #a4a4a4;
+    padding:1.8rem 0 1.4rem;
 }
 
 .flag-border {
@@ -152,18 +158,9 @@ input{
     border-width: 0 0 2px ;
     width:50%
 }
-#vld-tooltip {
-    position: absolute;
-    top:0;
-    z-index: 1000;
-    padding: 5px 10px;
-    background: #F37B1D;
-    width:100%;
-    /*min-width: 150px;*/
-    color: #fff;
-    text-align: center;
-    transition: all 0.15s;
-    box-shadow: 0 0 5px rgba(0,0,0,.15);
-    /*display: none;*/
+
+.liner {
+    height: 8px;
+    background: linear-gradient(to bottom, #a4a4a4, #f0f0f0);
 }
 
