--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -163,4 +163,13 @@ input{
     height: 8px;
     background: linear-gradient(to bottom, #a4a4a4, #f0f0f0);
 }
+.button1 {
+    width: 6rem;
+    height: 2.3rem;
+    color: white;
+    background-color: #ff6966;
+    border-radius: 3px;
+    text-align: center;
+    vertical-align: text-top;
+}
 
